k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hungry-snake-service
spec:
  selector:
    app: hungry-snake
  ports:
    - port: 8080
